fix: (CXSPA-953) - my account link outline overlapping with user name

--- a/feature-libs/user/account/styles/_login.scss
+++ b/feature-libs/user/account/styles/_login.scss
@@ -25,6 +25,13 @@
       nav > ul > li > button {
         padding-top: 4px;
         padding-bottom: 0;
+
+        // TODO: (CXSPA-7205) - Remove feature flag next major release
+        @include forFeature('a11yMyAccountLinkOutline') {
+          padding-top: 0;
+          margin-top: 4px;
+          outline-offset: 1px;
+        }
       }
     }
   }
